--- a/index.html
+++ b/index.html
@@ -112,6 +112,20 @@
             </div>
 
             <div class="formRow">
+                <label for="dish">Whats your favorite dish?</label>
+                <input type="text" name="favDish" id="dish" list="dishType">
+                <datalist id="dishType">
+                    <option value="Antipasto Pizza">
+                    <option value="Big Kahuna Pizza">
+                    <option value="BBQ ChickenPizza">
+                    <option value="Mediterranean Pizza">
+                    <option value="Pasta Rolls">
+                    <option value="Pesto Artichoke Pizza">
+                    </option>
+                </datalist>
+            </div>
+
+            <div class="formRow">
                 <label for="dineSpin">How many times do you dine out per month?</label>
                 <input name="dineOut" id="dineSpin" type="number" placeholder="1" step="1" min="0" max="20" />
             </div>
@@ -174,6 +188,14 @@
                     <input name="foodHot" id="hNo" value="No" type="radio">
                 </fieldset>
             </div>           
+
+            <div class="formRow">
+                <label for="rangeBox">Rate the overall Service<br/>
+                (0=poor; 10=great)</label>
+                0
+                <input type="range" name="serviceRate" id="rangeBox" value="5" step="1" min="0" max="10">
+                10   
+            </div>
 
             <label for="commBox">Tell us more about your experience!</label>
             <textarea name="custExp" id="commBox"></textarea>
