--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 
             <div class="formRow">
                 <label for="name">Name*</label> 
-            <input name="custName" id="name" type="text" placeholder="first and last name" />
+            <input name="custName" id="name" type="text" placeholder="first and last name" required/>
             </div>
 
             <div class="formRow">
@@ -86,17 +86,17 @@
 
             <div class="formRow">
                 <label for="zip">Postal Code</label> 
-            <input name="custZip" id="zip" type="text" placeholder="nnnnn (-nnnn)" />
+            <input name="custZip" id="zip" type="text" placeholder="nnnnn (-nnnn)" pattern"^/d{5}(-/d{4})?$"/>
             </div>
 
             <div class="formRow">
                 <label for="phone">Phone Number</label>
-            <input name="custPhone" id="phone" type="tel" placeholder="(nnn) nnn-nnnn" />
+            <input name="custPhone" id="phone" type="tel" placeholder="(nnn) nnn-nnnn" pattern="^\d{10}$|^(\(\d{3}\)\s*)?\d{3}[\s-]?\d{4}$"/>
             </div>
 
             <div class="formRow">
                 <label for="email">E-Mail</label>
-            <input name="custEmil" id="mail" type="emial" />
+            <input name="custEmil" id="mail" type="emial" required/>
             </div>
 
             <div class="formRow">
@@ -201,6 +201,12 @@
             <textarea name="custExp" id="commBox"></textarea>
 
         </fieldset>
+
+        <div id="buttons">
+            <input type="submit" value="Submit my Survey" />
+            <input type="reset" value="Cancel" />
+        </div>
+
     </form>
 
    </section>
